fix Logo on home screen and contact btn for mobile readability

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -13,7 +13,7 @@
 
     h1 {
         color: $primary-color;
-        font-size: 53px;
+        font-size: clamp(4rem, 5vw, 7rem);
         margin: 0;
         font-family: 'Coolvetica';
         font-weight: 400;
@@ -52,24 +52,20 @@
         img {
             position: relative;
             top: -3px;
-            width: 32px;
+            width: clamp(2.8rem, 3vw, 4.2rem);
             margin-left: 20px;
             opacity: 0;
             height: auto;
             animation: rotateIn 1s linear both;
             animation-delay: 1.4s;
             animation-fill-mode: both;
-
-            &:hover {
-                animation: rubberBand 1s;
-            }
         }
     }
 
     h2 {
-        color: #E66F45;
+        color: #ccc;
         margin-top: 20px;
-        font-weight: 400;
+        font-weight: 600;
         font-size: 11px;
         font-family: sans-serif;
         letter-spacing: 3px;
@@ -95,4 +91,15 @@
             color: #333;
         }
     }
+}
+
+@media (pointer: coarse) {
+    
+    .home-page {
+    .flat-button {
+        color: #333;
+        background: $primary-color;
+        }
+    }
+   
 }
