--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -56,7 +56,7 @@
     }
 
     h1 {
-        font-size: clamp(5rem, 5vw, 5rem);
+        font-size: clamp(4rem, 5vw, 7rem);
         font-family: 'Coolvetica';
         color: $primary-color;
         font-weight: 400;
